# kivio

./: .gitignore  AGENTS.md  AGENT_COLLAB.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  process_icon.ts  settings-snapshot.yml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/skills/: NOTICE.md
src-tauri/resources/skills/diagram/: SKILL.md
src-tauri/resources/skills/json-canvas/: SKILL.md
src-tauri/resources/skills/obsidian-bases/: SKILL.md
src-tauri/resources/skills/obsidian-cli/: SKILL.md
src-tauri/resources/skills/obsidian-markdown/: SKILL.md
src-tauri/src/: api.rs  app_data.rs  apple_intelligence.rs  capture_geometry.rs  capture_port.rs  cli_install.rs  commands.rs  cowork.rs  fonts.rs  inpainting.rs  lens.rs  lens_commands.rs  lib.rs  macos_ocr.rs  main.rs  notes.rs  ocr_port.rs  offline_models.rs  path_env.rs  platform_capabilities.rs  prompts.rs  rapidocr.rs  sck.rs  screenshot.rs  settings.rs  shortcuts.rs  state.rs  tesseract.rs  updates.rs  usage.rs  utils.rs  web_search.rs  windows.rs  windows_ocr.rs
src-tauri/src/agents/: parse.rs
src-tauri/src/chat/: ask_user.rs  attachments.rs  commands.rs  image_generation.rs  mcp_image_feedback.rs  memory.rs  mod.rs  model_call.rs  model_metadata.rs  plan.rs  probe.rs  request_debug.rs  storage.rs  sub_agent.rs  todo.rs  types.rs
src-tauri/src/chat/agent/: mod.rs  (+16 more)
src-tauri/src/connectors/: himalaya.rs  mod.rs  oauth.rs  obsidian.rs
src-tauri/src/external_agents/: attachments.rs  commands.rs  compact.rs  context.rs  detection.rs  errors.rs  mod.rs  prompt.rs  registry.rs  run.rs  skill_stage.rs  slash.rs  spawn.rs  types.rs  workspace.rs
src-tauri/src/kivio_code/: cli.rs  config.rs  errors.rs  executor.rs  mcp_setup.rs  mod.rs  project_context.rs  settings_loader.rs  skill_setup.rs  vision.rs
src-tauri/src/mcp/: client.rs  manager.rs  native_registry.rs  registry.rs  types.rs
src-tauri/src/native_tools/: fetch.rs  files.rs  mod.rs  sandbox_exports.rs  shell.rs
src-tauri/src/plugins/: install.rs  lifecycle.rs  mod.rs  preview.rs  state.rs
src-tauri/src/replace_translation/: layout.rs  mask.rs  mod.rs  visual_fixtures.rs
src-tauri/src/skills/: catalog.rs  discover.rs  marketplace.rs  mod.rs  parse.rs  runtime.rs  types.rs
src-tauri/swift/keylingo-ai-helper/: Package.swift
src-tauri/swift/kivio-ai-helper/: Package.swift
src-tauri/swift/kivio-ocr-helper/: Package.swift
(+737 files in other folders)
