[package]
name = "keylingo"
version = "2.0.2"
description = "KeyLingo - Smart Translation & AI Vision Tool for macOS/Windows"
authors = ["ZM"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3"
enigo = "0.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
xcap = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
